--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,10 +1,10 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: rollouts-demo
   annotations:
     ingress.kubernetes.io/proxy-body-size: 100M
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: "ingress-nginx-office"  # Updated Ingress class
     ingress.kubernetes.io/app-root: "/"
 spec:
   rules:
@@ -13,5 +13,8 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: rollouts-demo
-          servicePort: 80
+          service:
+            name: rollouts-demo  # Updated syntax for service name (kubernetes v1.19+)
+            port:
+              number: 80  # Updated syntax for port
+
